Mobile menu items alignment fix for larger tabs

--- a/style.css
+++ b/style.css
@@ -1924,6 +1924,12 @@ body:not(.elementor-editor-active) #casual-team {
 	}
 }
 @media (max-width:767.98px) {
+	#masthead nav.elementor-nav-menu--dropdown.elementor-nav-menu__container .menu-item-3460 {
+		max-width: fit-content;
+		justify-content: center;
+		margin: auto;
+		margin-top: 20px;
+	}
 	#main-flex-slider .th-slide-inner {
 		padding-top: 0;
 	}
@@ -2200,7 +2206,6 @@ body:not(.elementor-editor-active) #casual-team {
 		left: 10%;
 		transition: all .4s ease;
 	}
-	/*-- Mobile Menu's Footer --*/
 	.mobiler-footer, .mobiler-footer > a:first-child {
 		position: fixed;
 		flex-direction: column;
@@ -2209,6 +2214,10 @@ body:not(.elementor-editor-active) #casual-team {
 		align-items: center;
 		justify-content: center;
 		width: 100%;
+	}
+	#masthead #stb-menu ul {
+		position: relative;
+		top: 12%;
 	}
 }
 @media (max-width: 467.98px) {
@@ -2530,7 +2539,7 @@ body:not(.elementor-editor-active) #casual-team {
 		box-shadow: 0px 1px 2px rgba(11, 37, 65, 0.199326);
 	}
 	#masthead nav.elementor-nav-menu--dropdown.elementor-nav-menu__container .menu-item-3460 {
-		display: none;
+		display: none !important;
 	}
 	#butlerapp-services .elementor-widget-hotspot {
 		justify-content: center !important;
